GNOME Bugzilla – Bug 630493
Using full resolution during searches will cause an uninitialised pointer access
Last modified: 2010-09-24 14:43:54 UTC
Created attachment 171003 [details] [review] Fix uninitialised pointer access in grl_metadata_source_setup_full_resolution_mode If you do a metadata query with full resolution mode, grl_metadata_source_setup_full_resolution_mode will try to free uninitialised memory if the source already supports all the keys in the given key-list. Attached patch fixes this.
commit ff67f8492d77656de4b1ffeb2c8d97e2279630e2 Author: Chris Lord Date: Fri Sep 24 09:19:59 2010 +0100 metadata-source: Don't try to free an uninitialised pointer In grl_metadata_source_setup_full_resolution_mode, if the key-list is NULL then it skips to the end of the function - which frees the list and returns. This check happens before the list is assigned (or even, in fact, declare), so just return and avoid running g_list_free on uninitialised memory. https://bugzilla.gnome.org/show_bug.cgi?id=630493